--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 application/MANIFEST
 application/dist/*
 application/build/*
-application/__pycache__/*
+__pycache__
 extension.zip
 chrome_pass.egg-info
