--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -21,7 +21,7 @@
     "default_popup": "popup.html"
   },
   "commands": {
-    "_execute_browser_action": {
+    "_execute_action": {
       "suggested_key": {
         "default": "Alt+Shift+P"
       }
